GenericSetup Product Changelog

  After GenericSetup 1.3.4

    - Avoid even an explicit purge of the rolemap if no XML file is present
      in a given context.  (https://bugs.launchpad.net/zope-cmf/+bug/279294)

  GenericSetup 1.3.4 (2008/09/03)

    - Add 'IChunkedImportContext' interface, allowing RAM-efficient chunked
      reads of large files, and implement for 'DirectoryImportContext'.
      (https://bugs.launchpad.net/zope-cmf/+bug/259233)

    - Add 'IChunkedExportContext' interface, allowing RAM-efficient chunked
      writes of large files, and implement for 'DirectoryExportContext'.
      (https://bugs.launchpad.net/zope-cmf/+bug/257365)

    - Property import/export tests: Fix and test for non-ASCII properties.
      (https://bugs.launchpad.net/zope-cmf/+bug/202356)
      (https://bugs.launchpad.net/zope-cmf/+bug/242588)

    - Provide default for dependencies when processing metadata.xml, to
      avoid a KeyError.
      (https://bugs.launchpad.net/zope-cmf/+bug/255301)

    - During object manager imports do not throw an error when
      trying to remove an object that was already removed.

    - content: Add simple guard against import failures when
      the ".objects" file contains empty lines.
      (https://bugs.launchpad.net/zope-cmf/+bug/176328)


  GenericSetup 1.3.3 (2007/12/29)

    - Be more careful in checking context id validity.

    - tool: Fixed toolset import handler not to initialize tools again, when
      they already exist in the site.


  GenericSetup 1.3.2 (2007/09/11)

    - Ignore import and export step handlers that we can not resolve.

    - Restore the import context after running steps from a profile
      so we do not break on nested calls.

    - components: Provide log output when purging utilities or adapters.

    - components: Fixed an undefined variable name in a log message.


  GenericSetup 1.3.1 (2007/08/08)

    - components: correct the object path for the site root to be the
      empty string.
